labs/k8s/fil-rouge-expert/step5-security/4-worker-deployment-updated.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
  namespace: vote-app
  labels:
    app: worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
    spec:
      serviceAccountName: worker-sa
      containers:
      - name: worker
        image: dockersamples/examplevotingapp_worker
