labs/k8s/fil-rouge-expert/step5-security/1-default-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
  namespace: vote-app
spec:
  podSelector: {}
  policyTypes:
  - Ingress
